fix(ui): dark mode color improvements

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -312,9 +312,8 @@ blockquote.q-markdown--note
   border-style: solid
   border-color: $grey-6 $teal-6
 
-.q-dark, .body--dark
+.body--dark
   .q-markdown
-    background: $dark-page
     color: $grey-2
     code
       background: $grey-9
@@ -326,7 +325,7 @@ blockquote.q-markdown--note
       color: $grey-2
 
     pre, pre code
-      background: $dark-page
+      background: $dark
 
     .q-markdown--line-numbers-wrapper
       background: $grey-8
@@ -338,7 +337,7 @@ blockquote.q-markdown--note
       border: $grey-4 solid 1px
 
     .q-markdown--code
-      background: $grey-3
+      background: $dark
       color: $grey-10
 
     .q-markdown--note
